<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="workoutRowClicked"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/workoutImage"
            android:layout_width="100dip"
            android:layout_height="80dip"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher"
            android:onClick="imageClicked"
            />

        <LinearLayout
            android:id="@+id/workoutLinear"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/workoutImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workoutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BBBBB"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberOfSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AAAAA" />

            <TextView
                android:id="@+id/numberOfReps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CCCCC" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DDDDD" />

            <TextView
                android:id="@+id/bodyPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="DDDDD" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/trashBin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="trashButtonClicked"
            android:src="@drawable/ic_delete_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/workoutLinear"
            android:background="@android:color/holo_blue_light"
            android:orientation="vertical"></LinearLayout>

    </RelativeLayout>
</merge>
