...
                    android:layout_marginRight="30dp"
                    android:background="@null"
                    android:onClick="buttonClicked"
                    android:src="@drawable/plus_circle" />

                <Spinner
                    android:id="@+id/spinnerWeight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/holo_green_dark" />

                <ImageButton
...
                    android:layout_marginRight="30dp"
                    android:background="@null"
                    android:onClick="buttonClicked"
                    android:src="@drawable/plus_circle" />

                <Spinner
                    android:id="@+id/spinnerReps"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/holo_blue_dark" />

                <ImageButton
...
